--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "expo-linking": "~6.3.1",
     "expo-constants": "~16.0.2",
     "react-native-gesture-handler": "~2.16.1",
-    "expo-font": "~12.0.10"
+    "expo-font": "~12.0.10",
+    "react-native-web": "~0.19.10",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
